--- a/get-chat/app/globals.css
+++ b/get-chat/app/globals.css
@@ -171,3 +171,10 @@ body {
 
 
 
+.grid-container{
+  display: grid;
+  border: 1px solid black;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 15px;
+  justify-content: center;
+}
